kubernetes/base/my-app/astronauts-msvc-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: astronauts-msvc-deployment
  labels:
    app: astronauts-msvc
spec:
  replicas: 3
  selector:
    matchLabels:
      app: astronauts-msvc
  template:
    metadata:
      labels:
        app: astronauts-msvc
    spec:
      containers:
      - name: service
        image: k8s-astronauts-msvc:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 8000
        resources:
          limits:
            cpu: 500m
            memory: 200Mi
      - name: mongo
        image: mongo:latest
        ports:
        - containerPort: 27017
        resources:
          limits:
            cpu: 250m
            memory: 200Mi
---
apiVersion: v1
kind: Service
metadata:
  name: astronauts-msvc-service
spec:
  type: NodePort
  selector:
    app: astronauts-msvc
  ports:
  - protocol: TCP
    port: 8000
    nodePort: 30002
