kubernetes/base/my-app/auth-msvc-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      name: auth-deployment
  template:
    metadata:
      labels:
        name: auth-deployment
    spec:
      containers:
        - name: auth-msvc
          image: auth-msvc:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8000
        - name: auth-mongo
          image: mongo:latest
          ports:
            - containerPort: 27017
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
spec:
  type: ClusterIP
  selector:
    name: auth-deployment
  ports:
    - protocol: TCP
      port: 8000
