kubernetes/base/my-app/missions-msvc-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: missions-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      name: missions-deployment
  template:
    metadata:
      labels:
        name: missions-deployment
    spec:
      containers:
        - name: missions-msvc
          image: missions-msvc:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8000
        - name: missions-mongo
          image: mongo:latest
          ports:
            - containerPort: 27017
---
apiVersion: v1
kind: Service
metadata:
  name: missions-service
spec:
  type: ClusterIP
  selector:
    name: missions-deployment
  ports:
    - protocol: TCP
      port: 8000
